load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
   name = "encoder",
   srcs = ["encoder.go"],
   importpath = "github.com/gnossen/cache/encoder",
)

go_test(
   name = "encoder_test",
   srcs = ["encoder_test.go"],
   deps = [":encoder"],
)

go_library(
   name = "datastore",
   srcs = ["datastore.go"],
   importpath = "github.com/gnossen/cache/datastore",
)

go_test(
   name = "datastore_test",
   srcs = [
        "datastore_test.go",
        "datastore.go"
   ],
)

go_binary(
    name = "pagecacher",
    srcs = [
        "pagecacher.go",
    ],
    deps = [
        "@org_golang_x_net//html:html",
        "@org_golang_x_net//html/atom",
        ":datastore",
        ":encoder",
    ]
)
