load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
   name = "encoder",
   srcs = ["encoder/encoder.go"],
   importpath = "github.com/gnossen/knoxcache/encoder",
)

go_test(
   name = "encoder_test",
   srcs = ["encoder/encoder_test.go"],
   deps = [":encoder"],
)

go_library(
   name = "datastore",
   srcs = ["datastore/datastore.go"],
   importpath = "github.com/gnossen/knoxcache/datastore",
)

go_test(
   name = "datastore_test",
   srcs = [
        "datastore/datastore_test.go",
        "datastore/datastore.go"
   ],
)

go_binary(
    name = "knox",
    srcs = [
        "knox.go",
    ],
    deps = [
        "@org_golang_x_net//html:html",
        "@org_golang_x_net//html/atom",
        ":datastore",
        ":encoder",
    ]
)
